# Akari-solver

./: .clang-format  .gitignore  CMakeLists.txt  proj_to_cb.sh  run.sh
include/: https.h  js.h  level.h  position.h  tests.h
src/: backtracker.cpp  https.cpp  js.cpp  level.cpp  main.cpp  tests.cpp  trivial-solver.cpp
